# trash-classification

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: main.yml
src/: config.py
src/callback/: earlystopping.py
src/data/: preprocessing.py
src/metric/: metric.py
src/models/: evaluation.py  model.py  training.py
