[project]
name = "trash-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "gradio>=5.3.0",
    "huggingface-hub>=0.27.0",
    "loguru>=0.7.3",
    "torch>=2.5.1",
    "torchmetrics>=1.6.0",
    "torchvision>=0.20.1",
    "transformers>=4.47.1",
    "wandb>=0.19.1",
]
